fix: strict RSS 24h time parsing and WaytoAGI today/7d toggle

--- a/index.html
+++ b/index.html
@@ -47,8 +47,14 @@
 
       <section class="waytoagi-wrap">
         <div class="waytoagi-head">
-          <h2>WaytoAGI 近 7 日更新</h2>
-          <span id="waytoagiUpdatedAt">加载中...</span>
+          <h2>WaytoAGI 更新日志</h2>
+          <div class="waytoagi-tools">
+            <div class="waytoagi-switch">
+              <button id="waytoagiTodayBtn" class="waytoagi-btn active" type="button">当天</button>
+              <button id="waytoagi7dBtn" class="waytoagi-btn" type="button">近7日</button>
+            </div>
+            <span id="waytoagiUpdatedAt">加载中...</span>
+          </div>
         </div>
         <div id="waytoagiMeta" class="waytoagi-meta"></div>
         <div id="waytoagiList" class="waytoagi-list"></div>
